trying to fix overflow on x

--- a/src/index.css
+++ b/src/index.css
@@ -16,13 +16,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-html,
-body {
-  width: 100%;
-  max-width: 100vw;
-  overflow-x: clip;
-}
-
 /* a {
   font-weight: 500;
   color: #646cff;
