--- a/src/styles/LinkInBio.module.css
+++ b/src/styles/LinkInBio.module.css
@@ -3,10 +3,10 @@ div.LinkInBio {
   display: grid;
   place-items: center;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-color: var(--primary-color);
   color: #ffffff;
-  /* overflow-y: auto; */
+  overflow-y: auto;
 
   header {
     display: flex;
